# npm-name

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml
scripts/: install.sh
src/: lib.rs  main.rs
