[package]
authors = ["Weslei Juan Moser Pereira <wesleimsr@gmail.com>"]
description = "Check whether a package name is available on npmjs.com"
documentation = "https://docs.rs/npm-name"
edition = "2018"
license = "MIT"
name = "npm-name"
readme = "README.md"
repository = "https://github.com/wesleimp/npm-name"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.2"
quicli = "0.3.1"
reqwest = "0.9.2"

[dev-dependencies]
clippy = "0.0.302"
